# ai-rpg-agent

./: README.md
rpg-backend/: .gitignore  MIGRATION-TODO.md  README.md  alembic.ini  pyproject.toml  requirements.txt  tabletop_rpg.db
rpg-backend/alembic/: env.py
rpg-backend/alembic/versions/: a31e32b87734_add_initiative_type_field.py  a72f4afd4a9e_initial_migration.py  b13b827c08fb_add_death_saving_throw_fields.py  bc53afee9798_add_monster_id_field.py
rpg-backend/data/: armor.json  class_abilities.json  consumables.json  loot_tables.json  monsters.json  spells.json  status_effects.json  terrain_effects.json  weapons.json
rpg-backend/src/: config.py  database.py  main.py  seed.py
rpg-backend/src/character/: __init__.py  models.py  router.py  schemas.py  service.py
rpg-backend/src/combat/: __init__.py  models.py  router.py  schemas.py  service.py
rpg-backend/src/core/: __init__.py  enums.py  exceptions.py
rpg-backend/src/event/: __init__.py  models.py  router.py  schemas.py  service.py
rpg-backend/src/inventory/: __init__.py  models.py  router.py  schemas.py  service.py
rpg-backend/src/location/: __init__.py  models.py  router.py  schemas.py  service.py
rpg-backend/src/quest/: __init__.py  models.py  router.py  schemas.py  service.py
rpg-backend/src/reference/: router.py
rpg-backend/src/scenario/: __init__.py  models.py  router.py  schemas.py  (+1 more)
rpg-backend/tests/: conftest.py  test_character.py  test_combat.py  test_event.py  test_inventory.py  test_location.py  test_quest.py  test_scenario.py
rpg-backend/webapp/: app.js  index.html  styles.css
(+48 files in other folders)
